assets/css/style.scss
/* ... */
/* Articles */
section.articles {
  position: relative;
  z-index: 10;
  top: -150px;

  @media #{$ultra-large} {
    top: 0;
  }

  @include default-container();

  article.article {
    @include box-shadow(0 1em 3em -0.25em rgba(46, 46, 46, 0.61));
    border-radius: 10px;
    width: calc(33% - 25px);
    margin-right: 24px;
    margin-bottom: 75px;
    display: inline-block;
    background-color: #fff;

    @media #{$medium-device} {
      width: calc(50% - 30px);
    }

    @media #{$small-device} {
      width: 100%;
      margin-right: 0;
    }

    img.thumbnail {
      border-top-left-radius: 10px;
      border-top-right-radius: 10px;

      width: 100%;
    }

    div.content {
      padding: 20px;
      span.category {
        color: #888;
        text-transform: uppercase;
        font-size: 12px;
        display: block;
      }

      span.title {
        padding-top: 5px;
        display: block;
        font-weight: 600;
        font-size: 16px;
        letter-spacing: 0.03em;
      }

      span.text-preview {
        padding-top: 5px;
        font-weight: 300;
        color: #444;
        display: block;
        line-height: 1.5em;
      }
    }

    a.button {
      margin-left: 150px;
    }
  }
}

/* Article */
section.article,
section.page-template {
  @include default-container();
  @include box-shadow(0 1em 3em -0.25em rgba(46, 46, 46, 0.61));
  margin-top: -160px;
  margin-bottom: 150px;
  position: relative;
  z-index: 10;
  border-radius: 10px;
  background-color: #fff;

  @media #{$ultra-large} {
    margin-top: 0;
    margin-bottom: 350px;
  }

  div.content {
    padding: 50px 10%;

    a {
      color: #111;
      border-bottom: #007aff 2px solid;
      text-decoration: none;

      &:hover {
        color: #007aff;
      }
    }

    p {
      color: #444;
      font-weight: 300;
      font-size: 16px;
      line-height: 1.4em;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      font-size: 26px;
    }

    img {
      width: 100%;
      height: auto;
    }
  }
}

section.article div.content p:first-child {
  font-weight: 400;
  line-height: 1.2em;
}

/* Error */
section.error {
  @include default-container();
  margin-bottom: 350px;
  position: relative;
  z-index: 10;

  a {
    color: #007aff;
    text-decoration: none;
  }
}

/* Branding */
section.branding {
  @include default-container();
  position: relative;
  z-index: 10;
  margin-top: -150px;

  div.row {
    width: 100%;
    display: block;

    > .col-12,
    > .col-6,
    > .col-3 {
      display: inline-block;
    }

    .col-12 {
      width: 100%;
    }

    .col-6 {
      width: calc(50% - 16px);
      margin-right: 25px;

      &:last-child {
        margin-right: 0;
      }

      @media #{$small-device} {
        width: 100%;
        margin-right: 0;
      }
    }

    .col-3 {
      width: calc(25% - 23px);
      margin-right: 25px;

      &:last-child {
        margin-right: 0;
      }

      @media #{$small-device} {
        width: 100%;
        margin-right: 0;
      }
    }
  }

  figure {
    background-color: #fff;
    @include box-shadow(0 1em 3em -0.25em rgba(46, 46, 46, 0.61));
    border-radius: 10px;
    margin: 10px 0;
    text-align: center;

    &.logo {
      background-size: 96px 96px;
      background-position: 50%;
      background-repeat: no-repeat;
      height: 300px;

      &.color {
        background-size: 128px 128px;
        background-image: url(../img/branding/color.png);
        height: 500px;
      }

      &.black {
        background-image: url(../img/branding/black.png);
      }
      &.white {
        background-color: #111;
        background-image: url(../img/branding/white.png);
      }
    }

    &.color {
      height: 200px;
      color: #fff;

      &.purple {
        background-color: #59388d;
      }
      &.blue {
        background-color: #1688a7;
      }
      &.white {
        background-color: #fff;
        color: #111;
      }
      &.light-gray {
        background-color: #c1c1c1;
        color: #111;
      }
      &.dark-gray {
        background-color: #212121;
      }
      &.black {
        background-color: #111;
      }

      span.hex {
        display: block;
        margin-top: 85px;
        font-size: 22px;
      }
    }

    &.font {
      height: 200px;

      &.montserrat {
        font-family: 'Montserrat', sans-serif;
      }

      span.char {
        font-weight: 600;
        font-size: 56px;
        display: block;
        margin-top: 50px;
        color: #111;
      }

      span.name {
        display: block;
        color: #333;
        font-size: 18px;
      }
    }
  }

  div.text {
    padding: 50px 15%;

    p.description {
      font-weight: 300;
      line-height: 1.5em;
    }
  }
}
/* ... */

